@@ -38,6 +38,7 @@ Bug fixes
  * Added missing collection column specifier on document listing template (Sergey Fedoseev)
  * Page Copy will now also copy ParentalManyToMany field relations (LB (Ben Johnston))
  * Admin HTML header now includes correct language code (Matt Westcott)
+ * Unclear error message when saving image after focal point edit (Hugo van den Berg)
 
 
 Upgrade considerations
